@@ -1,6 +1,6 @@
 /* create config.h for CMake */
 #define PACKAGE_VERSION "@PACKAGE_VERSION@"
-#
+
 #cmakedefine HAVE_INTTYPES_H @HAS_INTTYPES_H@
 #cmakedefine HAVE_MEMORY_H @HAS_MEMORY_H@
 #cmakedefine HAVE_STDINT_H @HAS_STDINT_H@
@@ -14,9 +14,9 @@
 #cmakedefine HAVE_PNG_H  @HAVE_PNG_H@
 #cmakedefine HAVE_LIBTIFF @HAVE_LIBTIFF@
 #cmakedefine HAVE_TIFF_H @HAVE_TIFF_H@
-#
+
 #cmakedefine HAVE_LIBLCMS1 @HAVE_LIBLCMS1@
 #cmakedefine HAVE_LIBLCMS2 @HAVE_LIBLCMS2@
 #cmakedefine HAVE_LCMS1_H @HAVE_LCMS1_H@
 #cmakedefine HAVE_LCMS2_H @HAVE_LCMS2_H@
-#
+
